#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.64])
AC_INIT([debra], [0.2], [richard@devstructure.com])

# Checks for programs.
AC_PROG_INSTALL
AC_PATH_PROG([ronn], [ronn], [], [$PATH:/var/lib/gems/1.8/bin])
AC_PATH_PROG([gzip], [gzip], [], [$PATH])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile man/Makefile man/man1/Makefile])
AC_OUTPUT
