#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.64])
AC_INIT([debra], [0.2.3], [richard@devstructure.com])

# Checks for programs.
AC_PROG_INSTALL
AC_PROG_AWK
AC_PROG_GREP
AC_PATH_PROG([GIT], [git])
AC_PATH_PROG([GZIP], [gzip])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_CONFIG_SUBDIRS([man])
AC_OUTPUT
