#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
 
AC_PREREQ([2.64])
AC_INIT([manskeleton], [0.0.0], [])
 
# Checks for programs.
AC_PATH_PROG([ronn], [ronn], [], [$PATH:/var/lib/gems/1.8/bin])
AC_PATH_PROG([gzip], [gzip], [], [$PATH])
 
# Checks for libraries.
 
# Checks for header files.
 
# Checks for typedefs, structures, and compiler characteristics.
 
# Checks for library functions.
 
AC_CONFIG_FILES([Makefile man1/Makefile])
AC_OUTPUT
